--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "cms-livgb-de",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "4.23.1",
+    "@strapi/plugin-documentation": "^4.23.1",
+    "@strapi/plugin-graphql": "^4.23.1",
     "@strapi/plugin-i18n": "4.23.1",
     "@strapi/plugin-users-permissions": "4.23.1",
     "@strapi/strapi": "4.23.1",
@@ -19,17 +24,18 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-navigation": "^2.5.0",
+    "strapi-plugin-responsive-image": "^1.2.0",
     "styled-components": "5.3.3"
-  },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "3fdf42b0-92b6-460c-bece-a479935db571"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "overrides": {
+    "graphql": "16.8.1"
+  },
+  "strapi": {
+    "uuid": "3fdf42b0-92b6-460c-bece-a479935db571"
+  }
 }
